# bsc-binance-radar

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  package.json
archive-ts/: package.json  tsconfig.json
archive-ts/scripts/: backfill-range.ts  backfill.ts  enrich-bsc-mapping.ts  rebuild-buckets.ts  test-topic-limit.ts  verify-factories.ts
archive-ts/src/: index.ts
archive-ts/src/anomaly/: detector.ts  rules.ts
archive-ts/src/clients/: viem-clients.ts
archive-ts/src/core/: price-service.ts  swap-listener.ts
archive-ts/src/db/: queries.ts
archive-ts/src/notifier/: index.ts
archive-ts/src/token-tracker/: binance-coin-info.ts  builder.ts  tracker.ts  watchlist.ts
db/: init.sql
db/migrations/: 01_main_pools.sql
scripts/: analyze-launch-tops.ts  backfill-range.ts  backfill.ts  backtest-launch-detector.ts  enrich-bsc-mapping.ts  gen-main-pools-sql.ts  mid_migrate.sh  probe-main-pools.ts  sync-perpetuals.ts  test-feishu.ts
seed/: binance-perpetuals.json
src/: abis.rs  chain.rs  contracts.rs  discovery.rs  index.ts  lib.rs  stream_listener.rs  swap_processor.rs  types.rs
src/anomaly/: aggregator.rs  aggregator.ts  detector.rs  detector.ts  events.ts  mod.rs  rules.rs  rules.ts  tvl-cache.ts
src/clients/: bsc.rs  mod.rs
src/config/: abis.ts  chains.ts  contracts.ts
src/core/: livenessProbe.ts  price-service.ts  swap-listener.ts  tvl-calculator.ts
src/db/: index.ts  mod.rs  pool.rs  queries.rs  queries.ts
src/notifier/: feishu.rs  feishu.ts
src/token-tracker/: binance-futures.ts  binance-web3-search.ts  builder.ts  watchlist.ts
src/token_tracker/: mod.rs  seed.rs  watchlist.rs
src/types/: index.ts
src/utils/: ttlCache.ts
(+2 files in other folders)
